trivy_runner/templates/webapi-service.yaml
# mychart/templates/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080  # Optional: specify a node port or let Kubernetes choose one
  selector:
    app: webapi
